k8s/06-mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: ostad-mehedi
spec:
  type: ClusterIP
  ports:
  - port: 27017
    targetPort: 27017
    protocol: TCP
  selector:
    app: mongo
