k8s/08-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ostad-server
  namespace: ostad-mehedi
spec:
  type: ClusterIP
  ports:
  - port: 5050
    targetPort: 5050
    protocol: TCP
  selector:
    app: ostad-server
