k8s/10-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ostad-ui
  namespace: ostad-mehedi
spec:
  type: NodePort
  ports:
  - port: 5173
    targetPort: 5173
    nodePort: 30173
    protocol: TCP
  selector:
    app: ostad-ui
